Chapter05/external-service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
 name: external-service
spec:
 type: ExternalName
 externalName: someapi.somecompany.com
 ports:
 - port: 80
