Chapter05/kubia-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: kubia
spec:
 tls:
 - hosts:
   - kubia.example.com
   secretName: tls-secret
 rules:
 - host: kubia.example.com
   http:
    paths:
    - path: /
      backend:
       serviceName: kubia-nodeport
       servicePort: 80
